--- a/design/skin/skin.css
+++ b/design/skin/skin.css
@@ -357,7 +357,7 @@ body{/*overflow-x:hidden;overflow-y:hidden;*/width:100%;}
 			.l_text{display:inline-block;padding:5px 0 10px}
 
 
-.quick2_wrap {width:100px; height:100%; position:fixed; right:-20px; top:150px;}
+.quick2_wrap {width:100px;height:100%;position:fixed;right:-20px;top:150px;z-index: 1;}
 .quick2_wrap li {width:100%; height:140px; border-radius:10px 0 0 10px;transition:all 0.2s ease-out;}
 .quick2_wrap li:nth-child(1) {background:#595959; margin-bottom:10px;}
 .quick2_wrap li:nth-child(2) {background:#595959; margin-bottom:10px;}
